[package]
name = "wgpu_glyph"
version = "0.10.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
description = "A fast text renderer for wgpu, powered by glyph_brush"
license = "MIT"
keywords = ["font", "ttf", "truetype", "wgpu", "text"]
repository = "https://github.com/hecrj/wgpu_glyph"
documentation = "https://docs.rs/wgpu_glyph"
readme = "README.md"

[dependencies]
wgpu = "0.6"
glyph_brush = "0.7"
log = "0.4"
zerocopy = "0.3"
ordered-float = "2.0.0"

[dev-dependencies]
env_logger = "0.7"
winit = "0.22"
futures = "0.3"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
web-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }
